--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,21 @@ IF (WIN32)
   file(MAKE_DIRECTORY "./build/windows/")
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/build/windows/")
 ELSE()
+  # set stuff for linux
   file(MAKE_DIRECTORY "./build/linux/")
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/build/linux/")
 ENDIF()
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 
-include_directories("./libraries/glad/include/")
+include_directories("${CMAKE_BINARY_DIR}/libraries/glad/include/")
 
-add_subdirectory("./libraries/glfw")
+add_subdirectory("${CMAKE_BINARY_DIR}/libraries/glfw/")
+
+configure_file("${CMAKE_BINARY_DIR}/src/shader.vert" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+configure_file("${CMAKE_BINARY_DIR}/src/shader.frag" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 
 
-
-add_executable("world-generator" "./src/main.cpp" "./libraries/glad/src/glad.c")
+add_executable("world-generator" "${CMAKE_BINARY_DIR}/src/main.cpp" "${CMAKE_BINARY_DIR}/libraries/glad/src/glad.c")
 target_link_libraries(world-generator glfw)
